# Assignment-AI-agent

./: .gitignore  ASSIGNMENT_AGENT_DESIGN.md  DELIVERABLES.md  DESIGN.md  PRESENTATION.md  README.md  pyproject.toml  requirements-dev.txt
src/assignment_agent/: __init__.py  agent_controller.py  build_artifact_inspector.py  build_runner.py  build_test_analyzer.py  command_executor.py  command_line.py  command_output_capture.py  command_safety.py  context_manager.py  contracts.py  demo_ui.py  env_loader.py  error_accumulator.py  execution_intent.py  external_memory_store.py  goal_demo_ui.py  output_parser.py  planning_layer.py  reasoning_engine.py  repository_index.py  repository_service.py  response_generator.py  retrieval_planner.py  retrieval_strategies.py  stop_retry_controller.py  task_router.py  test_runner.py  tool_orchestrator.py  workspace_paths.py
src/context_agent/: __init__.py  agent_models.py  build_command_executor.py  build_failure_analyzer.py  codebase_indexer.py  command_line.py  context_budget_manager.py  conversation_memory_store.py  entity_fact_store.py  llm_gateway.py  main_agent.py  prompt_observability.py  repository_retrieval_engine.py
tests/: test_agent.py  test_assignment_agent.py  test_assignment_agent_components.py  test_assignment_agent_real_repo.py
tests/fixtures/mini_cpp/: CMakeLists.txt
tests/fixtures/mini_cpp/include/: json_pointer.hpp
tests/fixtures/mini_cpp/src/: main.cpp
